# bitsteward

./: .gitignore  README.md  meson.build  metadata  net.adaoh.Bitsteward.yml  pyproject.toml  python3-requirements.json  requirements.txt
.github/: FUNDING.yml
src/: main.py  meson.build  zetcode-pygtk.in
src/utility/: server_requests.py
src/views/vault_types/: login.py  secure_note.py
src/widgets/CustomWidgets/: SidebarListBoxRow.py
src/widgets/vault_types/: credit_card.py  id.py  login.py  secure_note.py
