[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "net.adaoh.Bitsteward"
version = "0.0.1"
authors = [
  { name="Maxime Vincent" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: LiLiQ-R+ License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Bitsteward/bitsteward"
"Bug Tracker" = "https://github.com/Bitsteward/bitsteward/issues"